--- a/styles/pricestyles.css
+++ b/styles/pricestyles.css
@@ -1,9 +1,3 @@
-/* Fonts */
-@font-face {
-    font-family: Neon;
-    src: url(NeonSans.otf);
-}
-
 /* Base Styles*/ 
 
 * {
@@ -27,13 +21,14 @@ img {
     display: block;
 }
 
-h1, h2, h3, h4 {
+
+h2, h3, h4 {
     font-family: Neon;
     font-size: 30px;
 }
 
 p, li, button, label, a {
-    font-family: 'Maitree', serif;
+    font-family: Bold;
     font-size: 20px;
     font-weight: bolder;
     line-height: 40px;
@@ -53,7 +48,7 @@ main {
 
 /* Navigation */ 
 .navigation {
-    background-color: black;
+    background-color: palevioletred;
     padding: 10px;
 }
 
@@ -61,6 +56,11 @@ ul li a {
     color: white;
     padding: 30px;
     text-shadow: none;
+    text-transform: uppercase;
+}
+
+a:hover {
+    color: pink;
 }
 
 /* Header */ 
@@ -79,6 +79,10 @@ h1 {
     display: flex;
     justify-self: center;
     align-items: center;
+    font-family: Titles;
+    font-size: 198px;
+    color: white;
+    font-weight: lighter;
 }
 
 /* Main */ 
@@ -97,16 +101,21 @@ h1 {
 }
 /* Text Styling */ 
 h2 {
-    padding-bottom: 50px ;
+    padding-bottom: 50px;
+    font-size: 38px;
 }
 
 h3 {
     text-transform: uppercase;
     margin-bottom: 20px;
+    text-shadow: 2px 2px 5px white;
 }
 
 p {
     text-transform: uppercase;
+    font-family: Bold;
+    -webkit-text-stroke-color: white;
+    -webkit-text-stroke-width: 1px;
 }
 
 .prices {
@@ -120,7 +129,7 @@ p {
     display: flex;
     flex-direction: column;
     text-align: center;
-    padding: 20px;
+    padding: 20px 0;
     margin-top: 50px;
     width: 50%;
 }
