--- a/styles/sass/partials/_footer.scss
+++ b/styles/sass/partials/_footer.scss
@@ -8,6 +8,11 @@
         font-weight: bold;
         font-style: italic;
         font-size: 17px;
+        font-family: Bold;
         color: black;
+        text-transform: uppercase;
+        -webkit-text-stroke-color: white;
+        -webkit-text-stroke-width: 1px;
+        text-align: center;
     }
 }
