--- a/styles/sass/partials/_hours.scss
+++ b/styles/sass/partials/_hours.scss
@@ -7,6 +7,7 @@
         width: 50%;
         border: 1px solid black;
         background-image: url(/assets/blurry-gradient-haikei6.png);
+        background-size: cover;
         padding: 20px;
         h2 {
             margin: 10px 0;
