Mobile Version Bug Fixes

--- a/styles/sass/partials/_about.scss
+++ b/styles/sass/partials/_about.scss
@@ -2,9 +2,8 @@
     display: flex;
     flex-direction: column;
     text-align: center;
-    background-image: url(/assets/brickwall.jpg);
+    background: url(/assets/brickwall.jpg) repeat center;
     background-size: cover;
-    background-attachment: fixed;
 
     h2 {
         margin: 70px 0 40px 0;
