--- a/styles/sass/partials/_header.scss
+++ b/styles/sass/partials/_header.scss
@@ -105,9 +105,9 @@ body {
             flex-direction: column;
             align-items: center;
             justify-content: center;
-            background-image: url(/assets/brickwall.jpg);
+            background: url(/assets/brickwall.jpg) no-repeat center;
             background-size: cover;
-            background-attachment: fixed;
+            
         .container {
             display: flex;
             flex-direction: column;
